# optichess

./: .gitignore  CMakeLists.txt  FEN_TEST.h  LICENSE  Makefile  README.MD  attack.c  bitboards.c  board.c  data.c  debug.c  genmove.c  globals.h  init.c  optichess.c  poskey.c
includes/: defs.h
src/: CMakeLists.txt  misc.c  optichess.c  uci.c
tests/: CMakeLists.txt
